set(
	SANGUIS_COLLISION_FILES
	include/sanguis/collision/center.hpp
	include/sanguis/collision/center_fwd.hpp
	include/sanguis/collision/duration.hpp
	include/sanguis/collision/length.hpp
	include/sanguis/collision/length2.hpp
	include/sanguis/collision/length2_fwd.hpp
	include/sanguis/collision/length_fwd.hpp
	include/sanguis/collision/log_location.hpp
	include/sanguis/collision/mass.hpp
	include/sanguis/collision/mass_fwd.hpp
	include/sanguis/collision/optional_result.hpp
	include/sanguis/collision/optional_result_fwd.hpp
	include/sanguis/collision/optional_result_pair.hpp
	include/sanguis/collision/optional_result_pair_fwd.hpp
	include/sanguis/collision/radius.hpp
	include/sanguis/collision/radius_fwd.hpp
	include/sanguis/collision/result.hpp
	include/sanguis/collision/result_fwd.hpp
	include/sanguis/collision/result_pair.hpp
	include/sanguis/collision/result_pair_fwd.hpp
	include/sanguis/collision/speed.hpp
	include/sanguis/collision/speed_fwd.hpp
	include/sanguis/collision/test.hpp
	include/sanguis/collision/test_move.hpp
	include/sanguis/collision/unit.hpp
	include/sanguis/collision/velocity.hpp
	include/sanguis/collision/velocity_fwd.hpp
	include/sanguis/collision/world/body.hpp
	include/sanguis/collision/world/body_base.hpp
	include/sanguis/collision/world/body_base_fwd.hpp
	include/sanguis/collision/world/body_body.hpp
	include/sanguis/collision/world/body_collision.hpp
	include/sanguis/collision/world/body_collision_container.hpp
	include/sanguis/collision/world/body_collision_fwd.hpp
	include/sanguis/collision/world/body_enter.hpp
	include/sanguis/collision/world/body_enter_container.hpp
	include/sanguis/collision/world/body_enter_fwd.hpp
	include/sanguis/collision/world/body_exit.hpp
	include/sanguis/collision/world/body_exit_container.hpp
	include/sanguis/collision/world/body_exit_fwd.hpp
	include/sanguis/collision/world/body_fwd.hpp
	include/sanguis/collision/world/body_group.hpp
	include/sanguis/collision/world/body_group_fwd.hpp
	include/sanguis/collision/world/body_parameters.hpp
	include/sanguis/collision/world/body_parameters_fwd.hpp
	include/sanguis/collision/world/body_unique_ptr.hpp
	include/sanguis/collision/world/create.hpp
	include/sanguis/collision/world/created.hpp
	include/sanguis/collision/world/created_fwd.hpp
	include/sanguis/collision/world/ghost.hpp
	include/sanguis/collision/world/ghost_base.hpp
	include/sanguis/collision/world/ghost_base_fwd.hpp
	include/sanguis/collision/world/ghost_fwd.hpp
	include/sanguis/collision/world/ghost_group.hpp
	include/sanguis/collision/world/ghost_group_fwd.hpp
	include/sanguis/collision/world/ghost_parameters.hpp
	include/sanguis/collision/world/ghost_parameters_fwd.hpp
	include/sanguis/collision/world/ghost_unique_ptr.hpp
	include/sanguis/collision/world/object.hpp
	include/sanguis/collision/world/object_fwd.hpp
	include/sanguis/collision/world/object_unique_ptr.hpp
	include/sanguis/collision/world/optional_body_enter.hpp
	include/sanguis/collision/world/optional_body_enter_fwd.hpp
	include/sanguis/collision/world/optional_body_exit.hpp
	include/sanguis/collision/world/optional_body_exit_fwd.hpp
	include/sanguis/collision/world/parameters.hpp
	include/sanguis/collision/world/parameters_fwd.hpp
	include/sanguis/collision/world/update_result.hpp
	include/sanguis/collision/world/update_result_fwd.hpp
	src/impl/adjust_speed.cpp
	src/impl/intersection.cpp
	src/impl/line_line_intersect.cpp
	src/impl/line_segment.cpp
	src/impl/log.cpp
	src/impl/make_range.cpp
	src/impl/make_spiral_range.cpp
	src/impl/rect_line_intersection.cpp
	src/impl/world/body_groups_for_body_group.cpp
	src/impl/world/body_groups_for_ghost_group.cpp
	src/impl/world/ghost_groups_for_body_group.cpp
	src/include/sanguis/collision/impl/adjust_speed.hpp
	src/include/sanguis/collision/impl/cross2.hpp
	src/include/sanguis/collision/impl/dir.hpp
	src/include/sanguis/collision/impl/dir_fwd.hpp
	src/include/sanguis/collision/impl/duration_to_time.hpp
	src/include/sanguis/collision/impl/grid_to_meter.hpp
	src/include/sanguis/collision/impl/intersection.hpp
	src/include/sanguis/collision/impl/intersection_fwd.hpp
	src/include/sanguis/collision/impl/is_null.hpp
	src/include/sanguis/collision/impl/line_line_intersect.hpp
	src/include/sanguis/collision/impl/line_segment.hpp
	src/include/sanguis/collision/impl/line_segment_fwd.hpp
	src/include/sanguis/collision/impl/log.hpp
	src/include/sanguis/collision/impl/make_range.hpp
	src/include/sanguis/collision/impl/make_spiral_range.hpp
	src/include/sanguis/collision/impl/normalize_opt.hpp
	src/include/sanguis/collision/impl/optional_intersection.hpp
	src/include/sanguis/collision/impl/optional_intersection_fwd.hpp
	src/include/sanguis/collision/impl/pos.hpp
	src/include/sanguis/collision/impl/pos_fwd.hpp
	src/include/sanguis/collision/impl/rect.hpp
	src/include/sanguis/collision/impl/rect_fwd.hpp
	src/include/sanguis/collision/impl/rect_line_intersection.hpp
	src/include/sanguis/collision/impl/time.hpp
	src/include/sanguis/collision/impl/time_fwd.hpp
	src/include/sanguis/collision/impl/world/body_ghost_group_pair.hpp
	src/include/sanguis/collision/impl/world/body_ghost_group_relation.hpp
	src/include/sanguis/collision/impl/world/body_group_container.hpp
	src/include/sanguis/collision/impl/world/body_group_pair.hpp
	src/include/sanguis/collision/impl/world/body_group_relation.hpp
	src/include/sanguis/collision/impl/world/body_groups_for_body_group.hpp
	src/include/sanguis/collision/impl/world/body_groups_for_ghost_group.hpp
	src/include/sanguis/collision/impl/world/collides.hpp
	src/include/sanguis/collision/impl/world/ghost_group_container.hpp
	src/include/sanguis/collision/impl/world/ghost_groups_for_body_group.hpp
	src/include/sanguis/collision/impl/world/make_groups.hpp
	src/log_location.cpp
	src/result.cpp
	src/test.cpp
	src/test_move.cpp
	src/world/body.cpp
	src/world/body_base.cpp
	src/world/body_body.cpp
	src/world/body_collision.cpp
	src/world/body_enter.cpp
	src/world/body_exit.cpp
	src/world/body_parameters.cpp
	src/world/create.cpp
	src/world/ghost.cpp
	src/world/ghost_base.cpp
	src/world/ghost_parameters.cpp
	src/world/object.cpp
	src/world/parameters.cpp
	src/world/update_result.cpp
)

set(
	SANGUIS_COLLISION_SIMPLE_FILES
	src/impl/world/simple/body.cpp
	src/impl/world/simple/ghost.cpp
	src/impl/world/simple/ghost_result.cpp
	src/impl/world/simple/grid_position.cpp
	src/impl/world/simple/object.cpp
	src/include/sanguis/collision/impl/world/simple/body.hpp
	src/include/sanguis/collision/impl/world/simple/body_base_hook.hpp
	src/include/sanguis/collision/impl/world/simple/body_fwd.hpp
	src/include/sanguis/collision/impl/world/simple/body_list.hpp
	src/include/sanguis/collision/impl/world/simple/body_list_grid.hpp
	src/include/sanguis/collision/impl/world/simple/body_list_grid_fwd.hpp
	src/include/sanguis/collision/impl/world/simple/body_move_callback.hpp
	src/include/sanguis/collision/impl/world/simple/body_remove_callback.hpp
	src/include/sanguis/collision/impl/world/simple/body_unique_ptr.hpp
	src/include/sanguis/collision/impl/world/simple/for_all_body_neighbors.hpp
	src/include/sanguis/collision/impl/world/simple/ghost.hpp
	src/include/sanguis/collision/impl/world/simple/ghost_fwd.hpp
	src/include/sanguis/collision/impl/world/simple/ghost_remove_callback.hpp
	src/include/sanguis/collision/impl/world/simple/ghost_result.hpp
	src/include/sanguis/collision/impl/world/simple/ghost_result_fwd.hpp
	src/include/sanguis/collision/impl/world/simple/ghost_unique_ptr.hpp
	src/include/sanguis/collision/impl/world/simple/grid_position.hpp
	src/include/sanguis/collision/impl/world/simple/object.hpp
)

set(
	SANGUIS_COLLISION_LINK_TARGETS
	${fcppt_core_TARGET}
	${sanguis_creator_TARGET}
)

list(
	APPEND
	SANGUIS_COLLISION_FILES
	"${SANGUIS_COLLISION_SIMPLE_FILES}"
)

sanguis_add_library(
	collision
	"${SANGUIS_COLLISION_FILES}"
	DEPS
		${SANGUIS_COLLISION_LINK_TARGETS}
		${sanguis_core_TARGET}
		${fcppt_log_TARGET}
	INCLUDES
		"${CMAKE_CURRENT_SOURCE_DIR}/src/include"
	COMPILE_DEFINITIONS
		"${SANGUIS_COLLISION_DEFINITIONS}"
)

add_subdirectory(
	bench
)
