set(
	SANGUIS_COLLISION_FILES
	impl/include/sanguis/collision/impl/adjust_speed.hpp
	impl/include/sanguis/collision/impl/circle.hpp
	impl/include/sanguis/collision/impl/circle_fwd.hpp
	impl/include/sanguis/collision/impl/collides.hpp
	impl/include/sanguis/collision/impl/cross2.hpp
	impl/include/sanguis/collision/impl/dir.hpp
	impl/include/sanguis/collision/impl/dir_fwd.hpp
	impl/include/sanguis/collision/impl/duration_to_time.hpp
	impl/include/sanguis/collision/impl/grid_to_meter.hpp
	impl/include/sanguis/collision/impl/intersection.hpp
	impl/include/sanguis/collision/impl/intersection_fwd.hpp
	impl/include/sanguis/collision/impl/is_null.hpp
	impl/include/sanguis/collision/impl/line_line_intersect.hpp
	impl/include/sanguis/collision/impl/line_segment.hpp
	impl/include/sanguis/collision/impl/line_segment_fwd.hpp
	impl/include/sanguis/collision/impl/make_range.hpp
	impl/include/sanguis/collision/impl/make_spiral_range.hpp
	impl/include/sanguis/collision/impl/move.hpp
	impl/include/sanguis/collision/impl/move_circle.hpp
	impl/include/sanguis/collision/impl/normalize_opt.hpp
	impl/include/sanguis/collision/impl/optional_intersection.hpp
	impl/include/sanguis/collision/impl/optional_intersection_fwd.hpp
	impl/include/sanguis/collision/impl/optional_speed.hpp
	impl/include/sanguis/collision/impl/optional_speed_fwd.hpp
	impl/include/sanguis/collision/impl/pos.hpp
	impl/include/sanguis/collision/impl/pos_fwd.hpp
	impl/include/sanguis/collision/impl/rect.hpp
	impl/include/sanguis/collision/impl/rect_fwd.hpp
	impl/include/sanguis/collision/impl/rect_line_intersection.hpp
	impl/include/sanguis/collision/impl/test_tile.hpp
	impl/include/sanguis/collision/impl/time.hpp
	impl/include/sanguis/collision/impl/time_fwd.hpp
	impl/include/sanguis/collision/impl/world/body_ghost_group_pair.hpp
	impl/include/sanguis/collision/impl/world/body_ghost_group_relation.hpp
	impl/include/sanguis/collision/impl/world/body_group_container.hpp
	impl/include/sanguis/collision/impl/world/body_group_pair.hpp
	impl/include/sanguis/collision/impl/world/body_group_relation.hpp
	impl/include/sanguis/collision/impl/world/body_groups_for_body_group.hpp
	impl/include/sanguis/collision/impl/world/body_groups_for_ghost_group.hpp
	impl/include/sanguis/collision/impl/world/ghost_group_container.hpp
	impl/include/sanguis/collision/impl/world/ghost_groups_for_body_group.hpp
	impl/include/sanguis/collision/impl/world/make_circle.hpp
	impl/include/sanguis/collision/impl/world/make_groups.hpp
	impl/include/sanguis/collision/impl/world/simple/body.hpp
	impl/include/sanguis/collision/impl/world/simple/body_base_hook.hpp
	impl/include/sanguis/collision/impl/world/simple/body_callback.hpp
	impl/include/sanguis/collision/impl/world/simple/body_fwd.hpp
	impl/include/sanguis/collision/impl/world/simple/body_list.hpp
	impl/include/sanguis/collision/impl/world/simple/body_list_grid.hpp
	impl/include/sanguis/collision/impl/world/simple/body_list_grid_fwd.hpp
	impl/include/sanguis/collision/impl/world/simple/body_move_callback.hpp
	impl/include/sanguis/collision/impl/world/simple/body_remove_callback.hpp
	impl/include/sanguis/collision/impl/world/simple/body_unique_ptr.hpp
	impl/include/sanguis/collision/impl/world/simple/for_all_body_neighbors.hpp
	impl/include/sanguis/collision/impl/world/simple/ghost.hpp
	impl/include/sanguis/collision/impl/world/simple/ghost_fwd.hpp
	impl/include/sanguis/collision/impl/world/simple/ghost_remove_callback.hpp
	impl/include/sanguis/collision/impl/world/simple/ghost_result.hpp
	impl/include/sanguis/collision/impl/world/simple/ghost_result_fwd.hpp
	impl/include/sanguis/collision/impl/world/simple/ghost_unique_ptr.hpp
	impl/include/sanguis/collision/impl/world/simple/grid_position.hpp
	impl/include/sanguis/collision/impl/world/simple/object.hpp
	impl/src/adjust_speed.cpp
	impl/src/intersection.cpp
	impl/src/line_line_intersect.cpp
	impl/src/line_segment.cpp
	impl/src/make_range.cpp
	impl/src/make_spiral_range.cpp
	impl/src/rect_line_intersection.cpp
	impl/src/test_tile.cpp
	impl/src/world/body_groups_for_body_group.cpp
	impl/src/world/body_groups_for_ghost_group.cpp
	impl/src/world/ghost_groups_for_body_group.cpp
	impl/src/world/simple/body.cpp
	impl/src/world/simple/ghost.cpp
	impl/src/world/simple/ghost_result.cpp
	impl/src/world/simple/grid_position.cpp
	impl/src/world/simple/object.cpp
	include/sanguis/collision/center.hpp
	include/sanguis/collision/center_fwd.hpp
	include/sanguis/collision/duration.hpp
	include/sanguis/collision/length.hpp
	include/sanguis/collision/length2.hpp
	include/sanguis/collision/length2_fwd.hpp
	include/sanguis/collision/length_fwd.hpp
	include/sanguis/collision/log.hpp
	include/sanguis/collision/log_fwd.hpp
	include/sanguis/collision/log_location.hpp
	include/sanguis/collision/mass.hpp
	include/sanguis/collision/mass_fwd.hpp
	include/sanguis/collision/optional_mass.hpp
	include/sanguis/collision/optional_mass_fwd.hpp
	include/sanguis/collision/optional_result.hpp
	include/sanguis/collision/optional_result_fwd.hpp
	include/sanguis/collision/optional_result_pair.hpp
	include/sanguis/collision/optional_result_pair_fwd.hpp
	include/sanguis/collision/radius.hpp
	include/sanguis/collision/radius_fwd.hpp
	include/sanguis/collision/result.hpp
	include/sanguis/collision/result_fwd.hpp
	include/sanguis/collision/result_pair.hpp
	include/sanguis/collision/result_pair_fwd.hpp
	include/sanguis/collision/speed.hpp
	include/sanguis/collision/speed_fwd.hpp
	include/sanguis/collision/test.hpp
	include/sanguis/collision/test_move.hpp
	include/sanguis/collision/unit.hpp
	include/sanguis/collision/velocity.hpp
	include/sanguis/collision/velocity_fwd.hpp
	include/sanguis/collision/world/body.hpp
	include/sanguis/collision/world/body_base.hpp
	include/sanguis/collision/world/body_base_fwd.hpp
	include/sanguis/collision/world/body_body.hpp
	include/sanguis/collision/world/body_collision.hpp
	include/sanguis/collision/world/body_collision_container.hpp
	include/sanguis/collision/world/body_collision_fwd.hpp
	include/sanguis/collision/world/body_enter.hpp
	include/sanguis/collision/world/body_enter_container.hpp
	include/sanguis/collision/world/body_enter_fwd.hpp
	include/sanguis/collision/world/body_exit.hpp
	include/sanguis/collision/world/body_exit_container.hpp
	include/sanguis/collision/world/body_exit_fwd.hpp
	include/sanguis/collision/world/body_fwd.hpp
	include/sanguis/collision/world/body_group.hpp
	include/sanguis/collision/world/body_group_fwd.hpp
	include/sanguis/collision/world/body_parameters.hpp
	include/sanguis/collision/world/body_parameters_fwd.hpp
	include/sanguis/collision/world/body_unique_ptr.hpp
	include/sanguis/collision/world/create.hpp
	include/sanguis/collision/world/created.hpp
	include/sanguis/collision/world/created_fwd.hpp
	include/sanguis/collision/world/ghost.hpp
	include/sanguis/collision/world/ghost_base.hpp
	include/sanguis/collision/world/ghost_base_fwd.hpp
	include/sanguis/collision/world/ghost_fwd.hpp
	include/sanguis/collision/world/ghost_group.hpp
	include/sanguis/collision/world/ghost_group_fwd.hpp
	include/sanguis/collision/world/ghost_parameters.hpp
	include/sanguis/collision/world/ghost_parameters_fwd.hpp
	include/sanguis/collision/world/ghost_unique_ptr.hpp
	include/sanguis/collision/world/object.hpp
	include/sanguis/collision/world/object_fwd.hpp
	include/sanguis/collision/world/object_unique_ptr.hpp
	include/sanguis/collision/world/optional_body_enter.hpp
	include/sanguis/collision/world/optional_body_enter_fwd.hpp
	include/sanguis/collision/world/optional_body_exit.hpp
	include/sanguis/collision/world/optional_body_exit_fwd.hpp
	include/sanguis/collision/world/parameters.hpp
	include/sanguis/collision/world/parameters_fwd.hpp
	include/sanguis/collision/world/update_result.hpp
	include/sanguis/collision/world/update_result_fwd.hpp
	src/log.cpp
	src/log_location.cpp
	src/result.cpp
	src/test.cpp
	src/test_move.cpp
	src/world/body.cpp
	src/world/body_base.cpp
	src/world/body_body.cpp
	src/world/body_collision.cpp
	src/world/body_enter.cpp
	src/world/body_exit.cpp
	src/world/body_parameters.cpp
	src/world/create.cpp
	src/world/ghost.cpp
	src/world/ghost_base.cpp
	src/world/ghost_parameters.cpp
	src/world/object.cpp
	src/world/parameters.cpp
	src/world/update_result.cpp
)

sanguis_add_library(
	collision
	"${SANGUIS_COLLISION_FILES}"
	HAS_IMPL_DIR
	DEPS
		${sanguis_creator_TARGET}
		${sanguis_core_TARGET}
		fcppt_boost_interface
		${fcppt_core_TARGET}
		${fcppt_log_TARGET}
	TRANSITIVE_DEPS
		sanguis_creator_interface
		fcppt_core_interface
		fcppt_log_interface
)

add_subdirectory(
	bench
)
