include_directories(
	"${CMAKE_CURRENT_SOURCE_DIR}/include"
)

include_directories(
	"${CMAKE_CURRENT_SOURCE_DIR}/src/include"
)

set(
	SANGUIS_CREATOR_INCLUDE_FILES
	include/sanguis/creator/deserialize.hpp
	include/sanguis/creator/difference_type.hpp
	include/sanguis/creator/exception.hpp
	include/sanguis/creator/generate.hpp
	include/sanguis/creator/grid.hpp
	include/sanguis/creator/grid_fwd.hpp
	include/sanguis/creator/maze.hpp
	include/sanguis/creator/name.hpp
	include/sanguis/creator/opening.hpp
	include/sanguis/creator/opening_container.hpp
	include/sanguis/creator/parameters.hpp
	include/sanguis/creator/parameters_fwd.hpp
	include/sanguis/creator/pos.hpp
	include/sanguis/creator/pos_fwd.hpp
	include/sanguis/creator/rand_value.hpp
	include/sanguis/creator/randgen.hpp
	include/sanguis/creator/randgen_fwd.hpp
	include/sanguis/creator/result.hpp
	include/sanguis/creator/result_fwd.hpp
	include/sanguis/creator/seed.hpp
	include/sanguis/creator/serialize.hpp
	include/sanguis/creator/signed_pos.hpp
	include/sanguis/creator/signed_pos_fwd.hpp
	include/sanguis/creator/size.hpp
	include/sanguis/creator/size_fwd.hpp
	include/sanguis/creator/size_type.hpp
	include/sanguis/creator/symbol.hpp
	include/sanguis/creator/tile.hpp
	include/sanguis/creator/tile_fwd.hpp
	include/sanguis/creator/tile_is_solid.hpp
	include/sanguis/creator/tile_size.hpp
	include/sanguis/creator/top_parameters.hpp
	include/sanguis/creator/top_parameters_fwd.hpp
)

SET(
	SANGUIS_CREATOR_SRC_FILES
	src/aux/deserialization/grid.cpp
	src/aux/deserialization/result.cpp
	src/aux/find_opposing_cell.cpp
	src/aux/neumann_neighbors.cpp
	src/aux/serialization/grid.cpp
	src/aux/serialization/result.cpp
	src/deserialize.cpp
	src/exception.cpp
	src/generate.cpp
	src/include/sanguis/creator/aux/deserialization/grid.hpp
	src/include/sanguis/creator/aux/deserialization/result.hpp
	src/include/sanguis/creator/aux/find_opposing_cell.hpp
	src/include/sanguis/creator/aux/neumann_neighbors.hpp
	src/include/sanguis/creator/aux/serialization/grid.hpp
	src/include/sanguis/creator/aux/serialization/result.hpp
	src/maze.cpp
	src/parameters.cpp
	src/randgen.cpp
	src/result.cpp
	src/serialize.cpp
	src/tile_is_solid.cpp
	src/top_parameters.cpp
)

set(
	SANGUIS_CREATOR_FILES
	"${SANGUIS_CREATOR_INCLUDE_FILES};${SANGUIS_CREATOR_SRC_FILES}"
)

fcppt_utils_add_source_groups(
	"${SANGUIS_CREATOR_FILES}"
)

add_library(
	sanguiscreator
	SHARED
	${SANGUIS_CREATOR_FILES}
)

target_link_libraries(
	sanguiscreator
	${fcppt_core_TARGET}
	${sgecore_TARGET}
	${sgeparse_TARGET}
)

install(
	TARGETS
	sanguiscreator
	DESTINATION
	${INSTALL_LIBRARY_DIR}
)
